<resources>
    <string name="app_name">Chat 4 Me</string>
    <string name="action_settings">Settings</string>
    <string name="action_read_sms">Read SMS</string>
    <string name="action_send_sms">Send SMS</string>
    <string name="action_logcat_menu">logcat testing</string>
    <string name="action_read_contacts">Read contacts</string>
    <string name="action_exit">Exit</string>
    <!-- Strings used for fragments for navigation -->
    <string name="conversation_list_label">Conversations</string>
    <string name="conversation_view_label">Conversation</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- Permissions-related strings -->
    <string name="required_permissions_denied">One or more required permissions was denied</string>
    <string name="sms_read_permission_ask">Chat 4 Me requires SMS access in order to work</string>
    <string name="sms_read_permission_denied">User denied permission to read SMS messages</string>
    <string name="sms_send_permission_denied">User denied permission to send SMS messages </string>

    <string name="new_conversation_label">Start a new conversation</string>
    <string name="no_conversations">No conversations yet</string>
    <string name="no_messages_in_conversation">No messages in conversation yet</string>
    <string name="sms_loading">Loading SMS conversations</string>
    <string name="no_nav_host_error">Unable to find navigation host (this shouldn\'t happen)</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="auto_reply_title">Auto-reply when driving</string>
    <string name="auto_reply_summary">If selected, the app will automatically reply to a sender if the accelerometer is in motion</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="disclaimer_title">First-use disclaimer</string>
    <string name="disclaimer_message">Chat 4 Me sends a small amount of data (your sent messages in a given conversation) to our proxy server when you request a message to be generated. This is only used for security purposes and is not kept permanently. By using the app, you accept this and promise that you won\'t abuse the system. Press OK to accept and Cancel to exit the app.</string>
</resources>