<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/ConversationsFragment">

    <fragment
        android:id="@+id/ConversationsFragment"
        android:name="com.example.chat4me.ConversationsFragment"
        android:label="@string/conversation_list_label"
        tools:layout="@layout/fragment_conversationlist">

        <action
            android:id="@+id/action_ConversationsFragment_to_ConversationViewFragment"
            app:destination="@id/ConversationViewFragment" />
        <argument
            android:name="threadID"
            app:argType="integer"
            android:defaultValue="-1" />
    </fragment>
    <fragment
        android:id="@+id/ConversationViewFragment"
        android:name="com.example.chat4me.ConversationViewFragment"
        android:label="@string/conversation_view_label"
        tools:layout="@layout/fragment_conversationview">

        <action
            android:id="@+id/action_ConversationViewFragment_to_ConversationsFragment"
            app:destination="@id/ConversationsFragment" />
    </fragment>
    <fragment
        android:id="@+id/SettingsFragment"
        android:name="com.example.chat4me.SettingsFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_SettingsFragment_pop"
            app:destination="@id/ConversationViewFragment" />
        <action
            android:id="@+id/action_SettingsFragment_return"
            app:popUpTo="@id/SettingsFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_SettingsFragment_to_ConversationsFragment"
            app:destination="@id/ConversationsFragment" />
    </fragment>
</navigation>